modified the app to retrieve and store data in a DB

--- a/ToDoList/ToDoList/appsettings.json
+++ b/ToDoList/ToDoList/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ToDoApplicationConnection" : "Server=.;Database=ToDoListDB;TrustServerCertificate=True; Integrated Security = True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
