--- a/SoapConfigAPI/SoapConfigApi/appsettings.json
+++ b/SoapConfigAPI/SoapConfigApi/appsettings.json
@@ -2,8 +2,24 @@
   "ConnectionStrings": {
     "XMLDeserializeConnection": "Server=.;Database=xmldeserialize;Integrated Security = True; TrustServerCertificate=True;"
   },
+
+  "Serilog": {
+    "Using": ["Serilog.Sinks.MSSqlServer"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=.;Database=xmldeserialize; Integrated Security=True; TrustServerCertificate=True;",
+          "tableName": "Logs",
+          "autoCreateSqlTable" :  true
+        }
+      }
+    ]
+  },
+  
   "Logging": {
-    "LogLevel": {
+    "LogLevel": { 
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
