refactored the code did the mentioned changes

--- a/NotificationAPI/NotificationAPI/appsettings.Development.json
+++ b/NotificationAPI/NotificationAPI/appsettings.Development.json
@@ -5,7 +5,8 @@
 
 
   "DocumentAPISettings": {
-    "ApiUrl" :  "http://localhost:63057/Document/Generate"
+    "ApiUrl" :  "http://localhost:63057/Document/Generate",
+    "Sender" :  "ayushjuyal246@gmail.com"
   },
 
   "Logging": {
